--- a/src/apps/copo_accessions_schema/templates/copo/accessions_schema/copo_accessions_schema.html
+++ b/src/apps/copo_accessions_schema/templates/copo/accessions_schema/copo_accessions_schema.html
@@ -80,10 +80,10 @@
              style="display: none;">
             <div class="copo-webui-popover">
                 <div class="webui-popover-inner">
-                    <h3 class="copo-webui-popover-title">Accessions - Getting started</h3>
+                    <h3 class="copo-webui-popover-title">Getting started</h3>
                     <div class="copo-webui-popover-content">
                         <div class="webpop-content-div">
-                            The accessions' page provides a platform to display the accessions by study within a profile. Please select a study from 
+                            The accessions page provides a platform to display the accessions by study within a profile. Please select a study from 
                             the dropdown menu to view the accessions associated with that study. If there is no study to select, it means you haven't uploaded any manifest for a study to COPO yet <br/><br/>
                         </div>
                     </div>
