--- a/src/apps/copo_assembly_submission/templates/copo/copo_assembly.html
+++ b/src/apps/copo_assembly_submission/templates/copo/copo_assembly.html
@@ -48,24 +48,25 @@
 {% block content %}
 
     <!-- getting started section -->
-    <!-- getting started section -->
     <div class="row">
         <div class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-0 page-welcome-message"
              style="display: none;">
             <div class="copo-webui-popover">
                 <div class="webui-popover-inner">
-                    <h3 class="copo-webui-popover-title">Assembly - Getting started</h3>
+                    <h3 class="copo-webui-popover-title">Getting started</h3>
                     <div class="copo-webui-popover-content">
                         <div class="webpop-content-div">
-                            The assembly page provides a platform for aligning and merging fragments of a
-                            Deoxyribonucleic acid (DNA) sequence to reconstruct the original structure of the DNA.
-                            <br/><br/>
-                            <div>To add assemblies, click the
-                                <button class="circular tiny ui icon primary button">
-                                    <i class="icon add sign"></i>
-                                </button>
-                                icon.
-                            </div>
+                            This page relates to the <strong>Assembly</strong> component 
+                            (<i id="componentIcon" class="ui icon" aria-hidden="true"></i>) of a profile.
+                            Assemblies involve aligning and merging fragments of a
+                            <span class="hover-text" title="Deoxyribonucleic acid">DNA</span> sequence 
+                            to reconstruct the original structure.
+                            <br><br>
+                            <b>To add assemblies</b>: click the
+                            <button class="circular tiny ui icon primary button no-click">
+                                <i class="icon add sign"></i>
+                            </button>
+                            icon above.
                         </div>
                     </div>
                 </div>
