--- a/src/apps/copo_core/templates/copo/components_template.html
+++ b/src/apps/copo_core/templates/copo/components_template.html
@@ -159,6 +159,53 @@
         </div>
     </div>
 
+    <!-- Page welcome message template -->
+    <div class="page-welcome-message-template">
+        <p class="msg-singlecell">Single-cell sequencing examines the nucleic acid sequence information from individual cells.</p>
+        <p class="msg-rembi">It is based on Recommended Metadata for Biological Images (REMBI) which provides guidelines for describing biological
+            images to support <span class="hover-text" title="Findable, Accessible, Interoperable, Reusable">FAIR</span> data.
+        </p>
+        <p class="msg-stx_fish">It is based on Spatial Transcriptomics using Fluorescence In Situ Hybridisation  
+            (<span style="font-style: italic;">STX FISH</span> or <span style="font-style: italic;">ST FISH</span>). 
+            This technique maps gene expression within tissue sections by visualising specific <span class="hover-text" title="Ribonucleic acid">RNA</span> 
+            molecules with fluorescent probes, preserving their spatial context.
+        </p>
+    </div>
+
+    <!-- Quick tour template -->
+    <!-- Quick tour: Initial popover -->
+    <div class="tour-popover tour-template webui-popover in" id="webuiPopover0">
+        <div class="webui-arrow"></div>
+        <div class="webui-popover-inner">
+            <a href="#" class="close"></a>
+            <h3 class="webui-popover-title">Quick Tour</h3>
+            <div class="webui-popover-content">
+                <div class="webpop-content-div">Would you like to take a quick tour of the page?<br><br>
+                    <span>Please note that your screen will be dimmed and regular page elements will be inaccessible during the quick tour mode.</span>
+                    <hr>
+                    <a class="tour-start-btn" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                        <i class="fa fa-lightbulb" aria-hidden="true"></i>
+                        &nbsp;Take tour
+                    </a>
+                    <a class="tour-dismiss-btn" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                        <i class="fa fa-times-circle" aria-hidden="true"></i>
+                        &nbsp;Dismiss tour
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Quick tour: Next button -->
+    <a class="tour-next-btn tour-next-btn-temp" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+        <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>&nbsp;Next tip
+    </a>
+
+     <!-- Quick tour: End button -->
+    <a class="tour-end-btn tour-end-btn-temp" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+        <i class="fa fa-times-circle" aria-hidden="true"></i>&nbsp;End tour
+    </a>
+
     <!-- progress bars -->
     <!--<div class="submission-progess-wrapper" style="margin-bottom: 15px;">
         <div class="submission-progress progress" style="height:30px; margin-bottom: 5px; background-image: none;">
