--- a/src/apps/copo_core/templates/copo/copo_submission.html
+++ b/src/apps/copo_core/templates/copo/copo_submission.html
@@ -44,7 +44,7 @@
              style="display: none;">
             <div class="copo-webui-popover">
                 <div class="webui-popover-inner">
-                    <h3 class="copo-webui-popover-title">Submissions - Getting started</h3>
+                    <h3 class="copo-webui-popover-title">Getting started</h3>
                     <div class="copo-webui-popover-content">
                         <div class="webpop-content-div">
                             <p>The submission component of a profile displays submission records (completed or pending)
