--- a/src/apps/copo_core/templates/copo/metadata_templates.html
+++ b/src/apps/copo_core/templates/copo/metadata_templates.html
@@ -40,7 +40,7 @@
         <div class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-0 page-welcome-message" style="display: none;">
             <div class="copo-webui-popover">
                 <div class="webui-popover-inner">
-                    <h3 class="copo-webui-popover-title">Metadata Templates - Getting Started</h3>
+                    <h3 class="copo-webui-popover-title">Getting Started</h3>
                     <div class="copo-webui-popover-content">
                         <div class="webpop-content-div">
                             The metadata template authoring system allows you to create a template to download in a
