--- a/src/apps/copo_single_cell_submission/templates/copo/copo_single_cell.html
+++ b/src/apps/copo_single_cell_submission/templates/copo/copo_single_cell.html
@@ -116,7 +116,7 @@
 
 <div class="modal bootstrap-dialog type-primary fade size-wide" tabindex="-1" role="dialog" id="singlecell_spreadsheet_modal" style="overflow-y: scroll"
 data-backdrop="static" data-keyboard="false">
-<div class="modal-dialog modal-lg" role="document" style="width: 99%">
+<div class="modal-dialog modal-lg" role="document" style="width: 1000px">
    <div class="modal-content">
     <div class="modal-header">
         <button id='singlecell_close_btn' type="button" class="close" aria-label="Close" data-dismiss="modal"><span
