--- a/src/apps/copo_barcoding_submission/templates/copo/ena_taggedseq_manifest_validate.html
+++ b/src/apps/copo_barcoding_submission/templates/copo/ena_taggedseq_manifest_validate.html
@@ -53,7 +53,8 @@
         }
 
         .checklist  {
-            color: red;
+            color: black;
+            font-weight: bold;
             font-size: 1.2em;
         }
     </style>
@@ -80,13 +81,11 @@
     <input type="hidden" id="profile_id" value="{{ profile_id }}"/>
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
-            <h3 class="h3">
-              for <span class="checklist" >{{ checklist_id }} : {{ checklist_name }} </span>
-            </h3>
+            <p> Please upload a completed barcoding manifest to validate:</p>
 
-            <p>
-                Upload a completed manifest for validation
-            </p>
+            <h3 class="h3">
+              <span class="checklist" >{{ checklist_id }}: {{ checklist_name }} </span>
+            </h3>
 
             <input id="file" type="file" style="display:none"/>
 
