--- a/src/apps/copo_sample/templates/copo/component_sample_spreadsheet_modal.html
+++ b/src/apps/copo_sample/templates/copo/component_sample_spreadsheet_modal.html
@@ -1,6 +1,6 @@
 <div class="modal fade" tabindex="-1" role="dialog" id="sample_spreadsheet_modal" style="overflow-y: scroll"
      data-backdrop="static" data-keyboard="false">
-    <div class="modal-dialog modal-lg" role="document" style="width: 99%">
+    <div class="modal-dialog modal-lg" role="document" style="width: 1000px">
         <div class="modal-content">
             <div class="modal-header">
                 <button id='sample_spreadsheet_close_btn1' type="button" class="close" aria-label="Close"><span
