--- a/static/copo/css/copo/orcid_profile.css
+++ b/static/copo/css/copo/orcid_profile.css
@@ -23,3 +23,13 @@
     box-shadow: inset 0 0 1px rgba(255, 255, 255, 0.1), 0 0 3px rgba(0, 0, 0, 0.8);
     padding: 5px;
 }
+
+.orcid-info img {
+    height: 24px;
+    padding-bottom: 4px;
+    padding-right: 5px;
+}
+
+.orcid-info a {
+    text-decoration: underline;
+}
